[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
rand = "0.8.5"
#r2d2 for connection pooling.
tokio = {version = "1.35.1", features = ["full"]}
redis = {version = "0.24.0", features = ["cluster","tls-native-tls","tokio-native-tls-comp","tokio-comp","aio","cluster-async"]}